<resources>
    <string name="app_name">Autovia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lottoFont">fonts/Lato-Light.ttf</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">111568372871262</string>
    <string name="fb_login_protocol_scheme">fb111568372871262</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_register">or Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="register">Register</string>
    <string name="road_service_name">Road Assistance</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="test">Test</string>

    <string name="firebase_api_key">AIzaSyBDXjj1edtpEc9JktFw8ddVPJYUMc8YwqA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="road_service_label">Road Services</string>
    <string name="alertTitle">Please grant me your location</string>
    <string name="alertMessage">we need to access your location to be able to Request the service</string>
    <string name="ok">Ok</string>
    <string name="title_activity_requests_">Requests_Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_requests">MyRequests</string>
    <string name="carCare_title">Car Care </string>
    <string name="workshop_title">Workshop</string>
    <string name="choose_lang">Choose Language</string>
    <string name="textappearance_value"></string>
    <string name="btn_lang_ar">العربيه</string>
    <string name="btn_lang_en">English</string>
    <string name="phone">Phone Number</string>
</resources>
