<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"

    tools:context="com.example.android.autovia.AccountSessions.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"

        android:src="@drawable/header"></ImageView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:src="@drawable/logogo"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorhint">

            <com.example.android.autovia.CustomViews.MyEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableRight="@drawable/user"
                android:gravity="left"
                android:hint="@string/name"
                android:maxLength="25"
                android:padding="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/studentemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorhint">

            <com.example.android.autovia.CustomViews.MyEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableRight="@drawable/email2"
                android:gravity="left"
                android:hint="@string/email"
                android:maxLength="25"
                android:padding="12dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/studentpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorhint">


            <com.example.android.autovia.CustomViews.MyEditText

                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableRight="@drawable/lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16dp" />


        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorhint">


            <com.example.android.autovia.CustomViews.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:drawableRight="@drawable/pass"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16dp" />


        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_back_h"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/stremember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_weight="2"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"
            android:gravity="end"
            android:text="Do you have account?"
            android:textColor="#000"
            android:textSize="14dp" />

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/sign_regist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_weight="2.3"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="Sign in now"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>
