<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/loginActivity"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:id="@+id/framSeLayout"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:scaleType="fitXY"
        android:src="@drawable/header"
        ></ImageView>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:src="@drawable/logogo"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout"
        android:orientation="vertical">

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign In"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="29dp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/studentemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorhint">

            <com.example.android.autovia.CustomViews.MyEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:gravity="left"
                android:hint="@string/email"
                android:maxLength="25"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorhint"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/studentpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorhint">


            <com.example.android.autovia.CustomViews.MyEditText

                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:padding="12dp"
                android:textColorHint="@color/colorhint"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linsear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linear"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Register"
                    android:layout_weight="1"
                    android:id="@+id/gglon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/vec1"/>

            </LinearLayout>




        </LinearLayout>


        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/signin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_back_h"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16dp" />






    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/rectfb"
            android:orientation="horizontal">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <ImageView
        android:id="@+id/facebook_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/fb"
        android:tint="#fff" />
</FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/rectgoogle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/googleicon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/google"
                android:tint="#ffff" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/forgot_Pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorhint"
            android:checked="false"
            android:gravity="start"
            android:text="Forgot Password?"
            android:textColor="@color/colorhint"
            android:textSize="15dp"
            android:textStyle="bold" />

        <com.example.android.autovia.CustomViews.MyTextView
            android:id="@+id/create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="end"
            android:text="Create Account"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
